# webrtc-vad-java

./: .gitignore  README.md  appveyor.yml
android/: CMakeLists.txt
android/src/main/cpp/: VoiceActivityDetector.extern.cpp
android/src/main/java/com/guilded/gg/: RNWebrtcVadModule.java
java/: CMakeLists.txt  build.bat  pom.xml
java/src/main/cpp/: VoiceActivityDetector.extern.cpp
java/src/main/java/io/webfolder/webrtc/vad/: WebRtcVad.java
java/src/test/java/io/webfolder/webrtc/vad/: TestWebRtc.java
